--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,150 +1,122 @@
+@define-color base_color #fdf6e3;
+@define-color bg_color #fdf6e3;
+
 * {
+  all: unset;
+}
+
+* {
+  font-family: Inter, sans-serif;
+  font-size: 13px;
+  font-weight: 500;
   border: none;
   border-radius: 0;
   min-height: 0;
-
-  font-family: Inter, "Noto Sans Nerd Font";
-  font-size: 13px;
 }
 
 window#waybar {
-  background-color: #22262b;
-  color: #e0dcd4;
-  transition-property: background-color;
-  transition-duration: 0.5s;
+  background-color: #fdf6e3;
+  border-bottom: 2px solid #93a1a1;
+}
+
+#workspaces,
+#clock,
+#cpu,
+#memory,
+#network,
+#pulseaudio,
+#tray,
+#idle_inhibitor,
+#keyboard-state,
+#custom-power {
+  background-color: transparent;
+  padding: 2px 12px;
+  margin: 0px 0px;
   border-radius: 0px;
-  border-bottom: 1px solid #22262b;
-}
-
-.modules-left {
-  margin-left: 3px;
-}
-
-.modules-right {
-  margin-right: 3px;
-}
-
-button {
-  box-shadow: inset 0 -3px transparent;
-  border: none;
-  border-radius: 0;
-}
-
-button:hover {
-  background-color: #282c34;
-  box-shadow: inset 0 -3px #b4bec8;
+  color: #586e75;
 }
 
 #workspaces {
-  background-color: transparent;
-  border-radius: 0;
-  padding: 0 5px;
+  padding: 0px 4px;
 }
 
 #workspaces button {
-  all: initial;
-  padding: 0 5px;
-  margin: 0;
-  min-width: 26px;
-  background-color: transparent;
-  color: #c0bdb8;
-  transition: all 0.2s ease;
+  padding: 4px 10px;
+  border-radius: 0px;
+  color: #93a1a1;
+  background-color: #fdf6e3;
+  border-bottom: 2px solid transparent;
 }
 
-#workspaces button:hover {
-  background-color: #282c34;
-  color: #e0dcd4;
-}
-
-#workspaces button.active {
-  background-color: #282c34;
-  box-shadow: inset 0 -3px #ccc4b0;
-  color: #ccc4b0;
-  font-weight: bold;
-}
-
-#workspaces button.urgent {
-  background-color: #c8beb8;
-  color: #1a1d21;
+#workspaces button.persistent {
+  color: #93a1a1;
 }
 
 #workspaces button.empty {
-  opacity: 0.5;
+  color: #93a1a1;
 }
 
-.modules-right {
-  background-color: transparent;
-  border-radius: 0;
-  padding: 0 5px;
+#workspaces button:not(.empty) {
+  color: #586e75;
+  font-weight: 600;
+  background-color: #eee8d5;
+  border-bottom: 2px solid #93a1a1;
 }
 
-#mode {
-  background-color: #3d424a;
-  border-bottom: 3px solid #b4bec8;
-  padding: 0 10px;
+#workspaces button.active {
+  color: #268bd2;
+  background-color: #e8dfc5;
+  font-weight: 600;
+  border-bottom: 3px solid #268bd2;
 }
 
-#idle_inhibitor,
-#keyboard-state,
-#pulseaudio,
-#wireplumber,
-#network,
-#cpu,
-#memory,
-#clock,
-#tray,
-#mode,
-#scratchpad {
-  margin: 0;
-  padding: 0 10px;
-  background-color: transparent;
-  color: #e0dcd4;
+#workspaces button:hover {
+  background-color: #eee8d5;
+  color: #268bd2;
 }
 
-#idle_inhibitor:hover,
-#keyboard-state:hover,
-#pulseaudio:hover,
-#wireplumber:hover,
-#network:hover,
-#cpu:hover,
-#memory:hover,
-#clock:hover,
-#tray:hover {
-  background-color: #282c34;
-  color: #e0dcd4;
+#keyboard-state {
+  color: #cb4b16;
+  font-weight: 600;
+  min-width: 16px;
 }
 
-#idle_inhibitor {
-  color: #c0bdb8;
+#keyboard-state > label.locked {
+  background-color: #eee8d5;
+  color: #cb4b16;
+  padding: 2px 8px;
+  border-radius: 4px;
+  border: 1px solid #93a1a1;
+  box-shadow: 0 2px 0 0 #93a1a1;
+  font-size: 11px;
+  font-weight: 600;
+  letter-spacing: 0.1em;
 }
 
-#idle_inhibitor.activated {
-  color: #ccc4b0;
-}
-
-#window,
-#workspaces {
-  margin: 0 4px;
-}
-
-tooltip {
-  padding: 2px;
-}
-
-.hidden {
-  opacity: 0;
-}
-
-#pulseaudio.muted {
-  color: #676d77;
+#temperature.critical {
+  color: #dc322f;
+  font-weight: 600;
 }
 
 #network.disconnected {
-  color: #c8beb8;
+  color: #dc322f;
+}
+
+#pulseaudio.muted {
+  color: #93a1a1;
+}
+
+#idle_inhibitor {
+  color: #93a1a1;
+}
+
+#idle_inhibitor.activated {
+  color: #859900;
 }
 
 #tray {
-  background-color: transparent;
+  padding: 4px 8px;
+  margin-top: -2px;
 }
 
 #tray > .passive {
@@ -153,5 +125,24 @@ tooltip {
 
 #tray > .needs-attention {
   -gtk-icon-effect: highlight;
-  background-color: #c8beb8;
+}
+
+#custom-power {
+  color: #dc322f;
+  padding: 4px 10px;
+}
+
+#custom-power:hover {
+  background-color: #dc322f;
+  color: #fdf6e3;
+}
+
+tooltip {
+  background-color: #fdf6e3;
+  border: 2px solid #93a1a1;
+  color: #586e75;
+}
+
+tooltip label {
+  color: #586e75;
 }
