Use JetBrains Mono for waybar and wofi

--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: Inter, sans-serif;
+  font-family: "JetBrainsMono Nerd Font Propo", Inter, sans-serif;
   font-size: 13px;
   font-weight: 500;
 }
