--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -6,7 +6,7 @@
 }
 
 * {
-  font-family: Inter, sans-serif;
+  font-family: "JetBrainsMono Nerd Font Propo", Inter, sans-serif;
   font-size: 13px;
   font-weight: 500;
   border: none;
